# traitor

./: .gitignore  LICENSE  README.md  pyproject.toml
traitor/: __init__.py  defaults.py  main.py  median_cut.py  tools.py
traitor/cli/: __init__.py  align.py  extract.py  measure.py  shape.py
