[tool.poetry]
name = "traitor"
version = "0.1.0"
description = ""
authors = ["Tankred Ott <ott.tankred@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-image = "^0.19.3"
scikit-learn = "^1.1.2"
opencv-python = "^4.6.0"
numpy = "^1.23.3"
pandas = "^1.5.0"
scipy = "^1.9.1"
cloup = "^1.0.0"
tqdm = "^4.64.1"
pyefd = "^1.6.0"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
mypy = "^0.971"
pytest = "^7.1.3"
pyinstaller = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
traitor = "traitor.cli:cli"
